; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/calc/extr_winmain.c_LoadRegInt.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/calc/extr_winmain.c_LoadRegInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @LoadRegInt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LoadRegInt(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %13 = call i64 @RegOpenKeyEx(i32 %10, i32 %11, i32 0, i32 %12, i32* %7)
  %14 = load i64, i64* @ERROR_SUCCESS, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %28

16:                                               ; preds = %3
  store i32 4, i32* %9, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %5, align 4
  %19 = ptrtoint i32* %8 to i32
  %20 = call i64 @RegQueryValueEx(i32 %17, i32 %18, i32* null, i32* null, i32 %19, i32* %9)
  %21 = load i64, i64* @ERROR_SUCCESS, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %6, align 4
  br label %25

25:                                               ; preds = %23, %16
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @RegCloseKey(i32 %26)
  br label %28

28:                                               ; preds = %25, %3
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i64 @RegOpenKeyEx(i32, i32, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueEx(i32, i32, i32*, i32*, i32, i32*) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
